fix(flexbox-grid): mobile spacing is now smaller on containers

--- a/packages/css/flexbox-grid/src/grid.css
+++ b/packages/css/flexbox-grid/src/grid.css
@@ -13,8 +13,13 @@
   max-width: var(--flexbox-grid-container-width, 1200px);
   margin-right: auto;
   margin-left: auto;
-  padding-right: var(--flexbox-grid-container-spacing, 40px);
-  padding-left: var(--flexbox-grid-container-spacing, 40px);
+  padding-right: var(--flexbox-grid-container-spacing--mobile, 20px);
+  padding-left: var(--flexbox-grid-container-spacing--mobile, 20px);
+
+  @media (--viewport-md-min) {
+    padding-right: var(--flexbox-grid-container-spacing, 40px);
+    padding-left: var(--flexbox-grid-container-spacing, 40px);
+  }
 
   &--fluid {
     max-width: 100%;
